[project]
name = "pyfda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "html5lib>=1.1",
    "jupyter>=1.1.1",
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "patsy>=1.0.1",
    "pyarrow>=18.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.37",
    "statsmodels>=0.14.4",
]
